# VanillaGS

./: .gitignore  compare.py  render.py  render_batch.py  render_with_tcgs.py
cuda_batch_rasterizer/: CMakeLists.txt  batch_rasterize_points.cu  batch_rasterize_points.h  ext.cpp  setup.py
cuda_batch_rasterizer/include/: auxiliary.h  config.h  forward.h  rasterizer.h  rasterizer_impl.h
cuda_batch_rasterizer/src/: forward.cu  rasterizer_impl.cu
cuda_rasterizer/: CMakeLists.txt  rasterize_points.cu  rasterize_points.h  setup.py
cuda_rasterizer/include/: config.h  forward.h  rasterizer.h
cuda_rasterizer/src/: forward.cu  rasterizer_impl.cu
cuda_rasterizer_tcgs/: CMakeLists.txt  rasterize_points.cu  setup.py
cuda_rasterizer_tcgs/include/: config.h  forward.h  rasterizer.h
cuda_rasterizer_tcgs/src/: forward.cu  rasterizer_impl.cu
other/: test.cu  test.py
